--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codaworks/react-glow": "^1.0.6",
     "@fontsource-variable/inter-tight": "^5.0.19",
     "@fontsource-variable/rubik": "^5.0.20",
     "@fontsource-variable/urbanist": "^5.0.19",
