--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "22.15.21",
+    "@types/react": "18.3.22",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
